Hide the terminate button.
The terminate button is a last resort and shouldn't be promoted in the UI.

This commit hides it behind a right click menu instead.
This also hides the 'Set as Fallback' label in the glade file.

--- a/src/pavucontrol.glade
+++ b/src/pavucontrol.glade
@@ -612,26 +612,6 @@ Monitors</property>
                             <property name="position">1</property>
                           </packing>
                         </child>
-                        <child>
-                          <widget class="GtkButton" id="terminateButton">
-                            <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <property name="receives_default">True</property>
-                            <property name="has_tooltip">True</property>
-                            <property name="tooltip" translatable="yes">Terminate stream</property>
-                            <child>
-                              <widget class="GtkImage" id="image1">
-                                <property name="visible">True</property>
-                                <property name="stock">gtk-delete</property>
-                              </widget>
-                            </child>
-                          </widget>
-                          <packing>
-                            <property name="expand">False</property>
-                            <property name="fill">False</property>
-                            <property name="position">2</property>
-                          </packing>
-                        </child>
                       </widget>
                       <packing>
                         <property name="expand">False</property>
@@ -794,28 +774,11 @@ Monitors</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">False</property>
-                            <property name="tooltip" translatable="yes">Set as default</property>
+                            <property name="tooltip" translatable="yes">Set as fallback</property>
                             <child>
-                              <widget class="GtkHBox" id="hbox2">
+                              <widget class="GtkImage" id="image2">
                                 <property name="visible">True</property>
-                                <child>
-                                  <widget class="GtkImage" id="image2">
-                                    <property name="visible">True</property>
-                                    <property name="icon_name">emblem-default</property>
-                                  </widget>
-                                  <packing>
-                                    <property name="position">0</property>
-                                  </packing>
-                                </child>
-                                <child>
-                                  <widget class="GtkLabel" id="label1">
-                                    <property name="visible">True</property>
-                                    <property name="label" translatable="yes">Use as fallback</property>
-                                  </widget>
-                                  <packing>
-                                    <property name="position">1</property>
-                                  </packing>
-                                </child>
+                                <property name="icon_name">emblem-default</property>
                               </widget>
                             </child>
                           </widget>
