--- a/src/pavucontrol.glade
+++ b/src/pavucontrol.glade
@@ -544,17 +544,13 @@ Monitors</property>
                           </packing>
                         </child>
                         <child>
-                          <widget class="GtkEventBox" id="deviceButton">
+                          <widget class="GtkButton" id="deviceButton">
+                            <property name="label" translatable="yes">Device</property>
                             <property name="visible">True</property>
-                            <child>
-                              <widget class="GtkLabel" id="deviceLabel">
-                                <property name="visible">True</property>
-                                <property name="can_focus">True</property>
-                                <property name="xalign">0</property>
-                                <property name="label" translatable="yes">&lt;a href=""&gt;Device&lt;/a&gt;</property>
-                                <property name="use_markup">True</property>
-                              </widget>
-                            </child>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">True</property>
+                            <property name="relief">half</property>
+                            <property name="xalign">0</property>
                           </widget>
                           <packing>
                             <property name="position">3</property>
