volume: Support volumes up to 11.
This allows us to set volumes up to ~153% aka +11dB.

Also show the current dB value in the UI - as pavucontrol is a bit more
developer-friendly than other volume UIs displaying this by default makes
sense.

--- a/src/pavucontrol.glade
+++ b/src/pavucontrol.glade
@@ -150,6 +150,7 @@
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="xalign">0</property>
+            <property name="yalign">0</property>
             <property name="label" translatable="yes">&lt;b&gt;left-front&lt;/b&gt;</property>
             <property name="use_markup">True</property>
             <property name="width_chars">15</property>
@@ -179,7 +180,11 @@
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="xalign">1</property>
-            <property name="label" translatable="yes">50%</property>
+            <property name="yalign">0</property>
+            <property name="xpad">8</property>
+            <property name="label" translatable="yes">&lt;small&gt;50%&lt;/small&gt;</property>
+            <property name="use_markup">True</property>
+            <property name="justify">right</property>
             <property name="width_chars">9</property>
           </object>
           <packing>
