Deal more gracefully with disconnections.
As pavucontrol is often used for debugging PA, it should
be quite robust and not popup messages etc. under 'normal'
testing conditions. This adds quite a verbose message under
some specific conditions that do crop up from time to time.

--- a/src/pavucontrol.glade
+++ b/src/pavucontrol.glade
@@ -1069,7 +1069,7 @@
         <child>
           <object class="GtkLabel" id="connectingLabel">
             <property name="can_focus">False</property>
-            <property name="label" translatable="yes">&lt;i&gt;Establishing connection to PulseAudio. Please wait...&lt;/i&gt;</property>
+            <property name="label" translatable="no">...</property>
             <property name="use_markup">True</property>
           </object>
           <packing>
