Fix theme under gtk3
We need to set the visible_window property to ensure
the theme background colour shines through.

https://bugzilla.gnome.org/show_bug.cgi?id=655635

--- a/src/pavucontrol.glade
+++ b/src/pavucontrol.glade
@@ -15,6 +15,7 @@
       <object class="GtkEventBox" id="cardWidget">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
+        <property name="visible_window">False</property>
         <child>
           <object class="GtkVBox" id="cardWidget1">
             <property name="visible">True</property>
@@ -204,6 +205,7 @@
       <object class="GtkEventBox" id="deviceWidget">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
+        <property name="visible_window">False</property>
         <child>
           <object class="GtkVBox" id="streamWidget2">
             <property name="visible">True</property>
@@ -1237,6 +1239,7 @@
       <object class="GtkEventBox" id="streamWidget">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
+        <property name="visible_window">False</property>
         <child>
           <object class="GtkVBox" id="streamWidget2">
             <property name="visible">True</property>
